--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -46,10 +46,6 @@ $nav-link-color--hover: lighten($base-font-color, 25%);
     &:hover {
         opacity: 0.7;
     }
-
-    & + nav {
-        display: none;
-    }
 }
 
 .hamburgerBox {
@@ -108,6 +104,36 @@ $nav-link-color--hover: lighten($base-font-color, 25%);
     &:after {
         transform: translate3d(0, -20px, 0) rotate(-270deg);
         transition-delay: 0.075s;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .mobileNav {
+        position: absolute;
+        top: -100vh;
+        left: 0;
+        opacity: 0;
+        transition: 200ms opacity ease-in-out;
+        width: 100%;
+        text-align: center;
+
+        ul {
+            list-style: none;
+            margin-left: 0;
+        }
+
+        a {
+            color: $white;
+            -webkit-font-smoothing: antialiased;
+            font-size: 1.6rem;
+        }
+    }
+
+    .mobileNavOpen {
+        display: block;
+        opacity: 1;
+        top: -23vh;
+        top: calc(-13% - 100px);
     }
 }
 
